Partially crunch software to make room for 128K MODBUFF

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,10 +3,14 @@ ChangeLog
 
 Version 1.1.0 - 1-Oct-2023:
  - Updated GameMite firmware to PicoMite 5.07.08 RC4.
+ - GameMite firmware now sets OPTION MODBUFF ENABLE by default to provide a
+   128K buffer for playing .mod files.
  - Startup screen now highlights when non-GameMite firmware is being used, or
    when the versions of the GameMite firmware and MMBasic program suite differ.
  - Fixed bug in PicoVaders that caused it to crash if its intro screen was
    allowed to run to completion.
+ - Partially crunched MMBasic program suite to make room for 128K MODBUFF on
+   the flash storage.
 
 Version 1.0.0 - 16-Sep-2023:
  - Initial public release.
