--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@ Version 1.1.0 - 1-Oct-2023:
    when the versions of the GameMite firmware and MMBasic program suite differ.
  - File browser now supports 500 files per directory, previously it supported
    a maximum of 100.
+ - File browser now plays .flac, .mod and .wav files when they are highlighted
+   and SELECT / A is pressed.
  - Fixed bug in PicoVaders that caused it to crash if its intro screen was
    allowed to run to completion.
  - Partially crunched MMBasic program suite to make room for 128K MODBUFF on
