--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 ChangeLog
 ---------
 
+Version 1.2 RC 2 - 24-Dec-2023:
+ - Updated PicoVaders => v1.1.3 fixing issue where the game would slow
+   down and become unplayable once most of the aliens were destroyed.
+
 Version 1.2 RC 1 - 21-Dec-2023:
  - Updated to use standard PicoMite firmware (5.08.00b5).
    Required options are:
