--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Version 1.2 RC 2 - 7-Jan-2024:
 Version 1.2 RC 1 - 21-Dec-2023:
  - Updated to use standard PicoMite firmware (5.08.00b5).
    Required options are:
+     OPTION PLATFORM "Game*Mite"
      OPTION SYSTEM SPI GP6,GP3,GP4
      OPTION AUTORUN 1,NORESET
      OPTION CPUSPEED 252000
@@ -16,7 +17,6 @@ Version 1.2 RC 1 - 21-Dec-2023:
      OPTION SDCARD GP22
      OPTION AUDIO GP20,GP21
      OPTION MODBUFF ENABLE 192
-     OPTION PLATFORM "Game*Mite"
  - Changed menu program to support multiple pages and be configurable
    via the "A:/.gm-menu" file:
    - This file will be created on startup if not present.
@@ -28,13 +28,13 @@ Version 1.2 RC 1 - 21-Dec-2023:
      in "A:/GameMite" and if not found there, in "B:/GameMite".
  - Changed startup screen to include image/logo
    - and made easier to configure via ".startup" file.
- - Added @Volhout's "Circle One" game (v1.1.0) to the program suite.
- - Updated program suite to use latest version of 'splib':
+ - Added @Volhout's "Circle One" game (v1.1.0) to the GameMite software.
+ - Updated the GameMite software to use latest version of 'splib':
      System software => v1.2 RC 1
      PicoVaders => v1.1.2
      Yellow River Kingdom => v1.1.1
      3D Maze => v1.1.1
- - Reduced size of program suite through better pre-processing.
+ - Reduced size of the GameMite software through better pre-processing.
 
 Version 1.1.0 - 1-Oct-2023:
  - Updated GameMite firmware to PicoMite 5.07.08 RC4.
