--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
 ChangeLog
 ---------
 
+Version 1.2.0 - 19-Jan-2024:
+ - Release version for use with the 5.08.00 PicoMite firmware.
+ - Updated "Circle One" => v1.1.1 fixing bug where if a button was being held
+   down when one of the players won then the game would pause until the button
+   was released before announcing the winner.
+
 Version 1.2 RC 2 - 7-Jan-2024:
- - Updated PicoVaders => v1.1.3 fixing issue where the game would slow
+ - Updated PicoVaders => v1.1.3 fixing bug where the game would slow
    down and become unplayable once most of the aliens were destroyed.
 
 Version 1.2 RC 1 - 21-Dec-2023:
